--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* DEBUG BG */
 html,body{height:100%;margin:0}
 body{
-  background-image:url('../img/animated.gif') !important; /* <-- set the right path */
+  background-image:url('starnight.gif') !important; /* <-- set the right path */
   background-position:center !important;
   background-repeat:no-repeat !important;
   background-size:cover !important;
@@ -324,6 +324,7 @@ span { display: inline-block; transition: all 0.2s ease; }
   #timer { font-size: 40px; }
   #wrapleaderboard { width: 92vw; height: 360px; }
 }
+
 
 
 
